<resources>
    <string name="app_name">The Movie DB</string>
    <string name="search_hint">Find movies here</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="movie">MOVIE</string>
    <string name="tv">TV SHOW</string>
    <string name="change_setting">Settings</string>
    <string name="overview">overview</string>
    <string name="title">title</string>
    <string name="todo">TODO</string>
    <string name="rating">Rating: %s/10 </string>
    <string name="release_date">Release Date : %s </string>
    <string name="share">Hello this movie is %1s from Yahya\'s application - Dicoding</string>
    <string name="airing">First Airing Date : %s </string>
    <string name="favorite">MY FAVORITE</string>
    <string name="texthintresult">We found %1s movies with query %2s</string>
    <string name="texthintresulttv">We found %1s tv shows with query %2s</string>

    <string name="pref_title_notifications">Notifications</string>
    <string name="key_today_reminder">key_today_reminder</string>
    <string name="daily_reminder">Daily Reminder</string>
    <string name="summary_daily_reminder">You will reveiced daily reminder every 7 AM</string>
    <string name="key_release_reminder">key_release_reminder</string>
    <string name="summary_release_reminder">You will receive daily movie release info every 8 AM</string>
    <string name="release_reminder">Release Reminder</string>
    <string name="lang_title">Language</string>
    <string name="summary_lang">Select language</string>
    <string name="lang">Language</string>
    <string name="langlang">en-US</string>
    <string name="key_lang">key_lang</string>
    <string name="appwidget_text">Favorite Movie</string>
    <string name="no_item">No Item</string>
    <string name="message_daily">Let\'s watch some good movies</string>
    <string name="image">Image</string>
    <string name="search_tv">Find tv shows here</string>
    <string name="now_paying">Now Playing</string>
    <string name="upcoming">Upcoming</string>
    <string name="exit">Exit</string>
    <string name="about">About</string>
    <string name="no_movie_release">No Movie Release Today</string>
    <string name="release_today_reminder">Release Today Reminder</string>
    <string name="released_message">Has Been Released Today!</string>
</resources>
