<androidx.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/lang_title"
        android:icon="@drawable/ic_settings_black_24dp">

        <Preference
            android:summary="@string/summary_lang"
            android:title="@string/lang"
            android:key="@string/key_lang">
        </Preference>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_title_notifications"
        android:icon="@drawable/ic_notifications_black_24dp">

        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/key_today_reminder"
            android:summary="@string/summary_daily_reminder"
            android:title="@string/daily_reminder" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/key_release_reminder"
            android:summary="@string/summary_release_reminder"
            android:title="@string/release_reminder" />
    </PreferenceCategory>

</androidx.preference.PreferenceScreen>
